Consul/Kubernetes/NetworkPoliciesinServiceMesh/static-client_wUpstream.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-client-upstream
spec:
  selector:
    app: static-client-upstream
  ports:
    - port: 4321
      targetPort: 4321
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static-client-upstream
  name: static-client-upstream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-client-upstream
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "static-server.svc.app-ns2.ns.dc1.dc:1234"
      labels:
        app: static-client-upstream
    spec:
      serviceAccountName: static-client-upstream
      containers:
        - name: static-client-upstream
          image: curlimages/curl:7.77.0
          ports:
            - containerPort: 4321
          command: ["/bin/sh", "-c", "--"]
          args: ["while true; do sleep 30; done;"]
          securityContext:
            privileged: true
            runAsUser: 0
