Consul/Kubernetes/NetworkPoliciesinServiceMesh/defaultdenyIngress-consul-dp.yaml
# Apply to both app-ns2 and app-ns2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: consul-dp # CHANGE THIS to app-ns2 for the second application
spec:
  podSelector: {}
  policyTypes:
  - Ingress
