Consul/Kubernetes/NetworkPoliciesinServiceMesh/egresspolicyforapp-ns1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mesh-egress-to-app-ns2
  namespace: app-ns1
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: app-ns2
    ports:
    - protocol: TCP
      port: 20000
