Consul/Kubernetes/NetworkPoliciesinServiceMesh/ingresspolicyforapp-ns2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mesh-ingress-from-app-ns1
  namespace: app-ns2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: app-ns1
    ports:
    - protocol: TCP
      port: 20000
